k8-manifests/ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
      - name: products
        image: venugopal87/nginx-multipath-demo:v1 
        ports:
        - containerPort: 80
