k8-manifests/ingress/services-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: services-service
spec:
  selector:
    app: services
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
