k8-manifests/ingress/nginx-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
spec:
  rules:
  - host: kodecraft.ingress.testing 
    http:
      paths:
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: products-service
            port:
              number: 80
      - path: /services
        pathType: Prefix
        backend:
          service:
            name: services-service
            port:
              number: 80
